--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,10 +4,10 @@
 
 # Optionally set the version of Python and requirements required to build your docs
 
-python:
-  version: "3.7"
-  install:
-    - method: pip
-      path: .
-      extra_requirements:
-        - ['sphinx_copybutton']
+#python:
+#  version: "3.7"
+#  install:
+#    - method: pip
+#      path: .
+#      extra_requirements:
+#        - ['sphinx_copybutton']
