--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,8 +1,14 @@
+
 # .readthedocs.yaml
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Optionally set the version of Python and requirements required to build your docs
+# Required
+version: 2
+
+# Build documentation in the docs/ directory with Sphinx
+sphinx:
+   configuration: source/conf.py
 
 #python:
 #  version: "3.7"
