--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,6 +13,6 @@ sphinx:
 python:
     version: "3.7"
     install:
-      - requirements: ./requirements.txt
+      - requirements: requirements.txt
       - method: pip
         path: .
