--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,9 +10,11 @@ version: 2
 sphinx:
    configuration: source/conf.py
 
-python:
-    version: "3.7"
-    install:
-      - requirements: requirements.txt
-      - method: pip
-        path: .
+#advance cfg by web
+#see https://readthedocs.org/dashboard/gent/advanced/
+#python:
+#    version: "3.7"
+#    install:
+#      - requirements: requirements.txt
+#      - method: pip
+#        path: .
